--- a/config/locales/it.yml
+++ b/config/locales/it.yml
@@ -387,6 +387,7 @@ it:
     tag: Tags
     transport_location: Transport
     unit: Unità
+    activity_event: "programma approssimativo"
   number:
     currency:
       format:
