--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -33,18 +33,14 @@ de:
         stufe_recommended: Stufen Empfohlen
         stufen: Stufen möglich
         transport_location: Transport-Ort
-      field:
-        name: Name
-      spot:
-        name: Name
-        color: Farbe für Erfassung der Durchführung
-        fields: Felder
       activity_execution:
         language_flags: Sprachen
+      field:
+        name: Name
       fixed_event:
-        title: Titel
-        starts_at: Beginnt um
         ends_at: Endet um
+        starts_at: Beginnt um
+        title: Titel
       leader:
         birthdate: Geburtsdatum
         first_name: Vorname
@@ -74,6 +70,10 @@ de:
           leader_water_security: Leiter-/in Sicherheitsaktivität Wasser
           participant: Teilnehmende/-r
         scout_name: Pfadiname
+      spot:
+        color: Farbe für Erfassung der Durchführung
+        fields: Felder
+        name: Name
       unit:
         abteilung: Abteilung
         activity_booking_phase: Buchungsphase
@@ -106,16 +106,20 @@ de:
           has_many: Datensatz kann nicht gelöscht werden, da abhängige %{record} existieren.
           has_one: Datensatz kann nicht gelöscht werden, da ein abhängiger %{record}-Datensatz
             existiert.
+        start_not_before_end: das Startdatum muss vor dem Enddatum liegen
       models:
-        unit:
-          attributes:
-            lagerleiter:
-              incomplete: ist unvollständig (Name, E-Mail, Adresse)
         activity_execution:
           attributes:
             language_flags:
               greater_than: Es muss mindestens eine Sprache gewählt werden.
+        unit:
+          attributes:
+            lagerleiter:
+              incomplete: ist unvollständig (Name, E-Mail, Adresse)
     models:
+      field:
+        one: Feld
+        other: Felder
       fixed_event:
         one: Groprogramm-Punkt
         other: Groprogramm-Punkte
@@ -134,9 +138,9 @@ de:
       spot:
         one: Programmspot
         other: Programmspots
-      field:
-        one: Feld
-        other: Felder
+      unit:
+        one: Lager
+        other: Lager
   activity:
     edit:
       title: Aktivität editieren
@@ -156,12 +160,35 @@ de:
       stufe_recommended: "Geeignet für:"
       executions: "Durchführungen"
   activity_execution:
+    edit:
+      title: Programmpunkt editieren
     index:
       title: Grobprogramm
     new:
       title: Neuen Programmpunkt erfassen
-    edit:
-      title: Programmpunkt editieren
+  activity_execution_calendar:
+    copy:
+      error: 'Fehler beim Kopieren der Durchführung:'
+      success: Durchführung erfolgreich kopiert
+    create:
+      error: 'Fehler beim Erstellen der Durchführung:'
+      success: Durchführung erfolgreich erstellt
+    delete:
+      confirm: Bist du sicher, dass du die Durchführung löschen willst?
+      error: 'Fehler beim Löschen der Durchführung:'
+      success: Durchführung erfolgreich gelöscht
+    editor:
+      date_invalid: Der Startzeitpunkt kann nicht vor dem Endzeitpunkt liegen
+      has_transport: Mit Transport
+      languages: Sprachen
+      manage_spot_hint: 'Falls du mehr Programmspots brauchst, klicke hier:'
+      manage_spot_link_text: Programmspots verwalten
+    move:
+      error: 'Fehler beim Verschieben der Durchführung:'
+      success: Durchführung erfolgreich verschoben
+    update:
+      error: 'Fehler beim Ändern der Durchführung:'
+      success: Durchführung erfolgreich geändert
   app:
     title: Orca
   buttons:
@@ -389,20 +416,6 @@ de:
         bis 31. Juli 2020 zu begleichen. \nMova – on y va!"
       ref: "Rechnung: %{ref}"
       title: Lagerbeitrag Abteilungen Bundeslager 2021
-  spots:
-    edit:
-      title: Programmspot editieren
-    index:
-      title: Programmspots verwalten
-    new:
-      title: Neuen Programmspot erfassen
-  fields:
-    edit:
-      title: Feld editieren
-    index:
-      title: "%{spot}: Felder verwalten"
-    new:
-      title: Neues Feld erfassen
   leaders:
     edit:
       title: Leitperson editieren
@@ -423,6 +436,7 @@ de:
   nav:
     activity: Katalog
     activity_category: Kategorie
+    fixed_event: Grobprogramm
     language:
       de: DE
       en: EN
@@ -435,8 +449,6 @@ de:
     tag: Tags
     transport_location: Transport
     unit: Lager
-    fixed_event: "Grobprogramm"
-    spots: Programmspots & Felder
   number:
     currency:
       format:
@@ -544,6 +556,13 @@ de:
     participants_count_activity_hint: Max Anzahl Personen die an der Aktivität teilnehmen
       können
     participants_count_transport_hint: Max Kapazität der Aktivität (inkl. Leitung)
+  spots:
+    edit:
+      title: Programmspot editieren
+    index:
+      title: Programmspots verwalten
+    new:
+      title: Neuen Programmspot erfassen
   support:
     array:
       last_word_connector: " und "
