--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -355,6 +355,7 @@ en:
   nav:
     activity: Activity
     activity_category: Kategory
+    fixed_event: Fixed eents
     language:
       de: DE
       en: EN
@@ -367,7 +368,6 @@ en:
     tag: Tags
     transport_location: Transport
     unit: Unit
-    fixed_event: "Fixed eents"
   number:
     currency:
       format:
