--- a/config/locales/it.yml
+++ b/config/locales/it.yml
@@ -123,12 +123,12 @@ it:
     show:
       downloads: Downloads
       duration: 'Dauer:'
+      executions: Esecuzioni
       max_people: Max. Gruppengrösse
       more_information: Weitere Informationen
       possible: möglich
       simo_text: 'Benötigt Sicherheitsmodul:'
       stufe_recommended: 'Geeignet für:'
-      executions: "Esecuzioni"
   app:
     title: Orca
   buttons:
@@ -375,6 +375,7 @@ it:
   nav:
     activity: Catalogo
     activity_category: Kategorie
+    fixed_event: programma approssimativo
     language:
       de: DE
       en: EN
@@ -387,7 +388,6 @@ it:
     tag: Tags
     transport_location: Transport
     unit: Unità
-    fixed_event: "programma approssimativo"
   number:
     currency:
       format:
